dataset1235/2025-2/805158916/users/69248557/executions/1584167357_997093868.log
== RUN (2025-08-27 14:10:59)
-- CODE: 
a = float(input("Digite um numero "))
b = float(input("Digite um numero "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:10:16)
-- CODE: 
a = float(input("Digite um numero "))
b = float(input("Digite um numero "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:11:49)
-- CODE: 
a = float(input("Digite um numero "))
b = float(input("Digite um numero "))
soma = a + b
print(round(soma,0)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 4
    print(round(soma,0)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 4
    print(round(soma,0)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 4
    print(round(soma,0)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 4
    print(round(soma,0)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 4
    print(round(soma,0)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 4
    print(round(soma,0)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:12:24)
-- CODE: 
a = float(input("Digite um numero "))
b = float(input("Digite um numero "))
soma = a + b
print(round(soma,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:12:55)
-- CODE: 
a = int(input("Digite um numero "))
b = int(input("Digite um numero "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:10:04)
-- CODE: 
a = float(input("Digite um numero "))
b = float(input("Digite um numero "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:10:42)
-- CODE: 
a = float(input("Digite um numero "))
b = float(input("Digite um numero "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:13:02)
-- CODE: 
a = int(input("Digite um numero "))
b = int(input("Digite um numero "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:13:11)
-- CODE: 
a = int(input("Digite um numero "))
b = int(input("Digite um numero "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:11:54)
-- CODE: 
a = float(input("Digite um numero "))
b = float(input("Digite um numero "))
soma = a + b
print(round(soma,0))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:10:26)
-- CODE: 
a = float(input("Digite um numero "))
b = float(input("Digite um numero "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero Digite um numero 20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero Digite um numero 5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero Digite um numero 68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero Digite um numero 185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero Digite um numero 44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero Digite um numero 108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
